--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "",
+	"name": " ",
 	"type": "module",
 	"version": "0.0.1",
 	"scripts": {
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@astrojs/tailwind": "^3.0.1",
 		"astro": "^2.0.12",
+		"astro-icon": "^0.8.0",
 		"tailwindcss": "^3.2.6"
 	},
 	"devDependencies": {
