--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"@astrojs/tailwind": "^3.0.1",
-		"astro": "^2.0.12",
-		"astro-icon": "^0.8.0",
-		"tailwindcss": "^3.2.6"
+		"@astrojs/react": "^2.2.1",
+		"@astrojs/tailwind": "^4.0.0",
+		"astro": "^2.10.7",
+		"astro-icon": "^0.8.1",
+		"tailwindcss": "^3.3.3"
 	},
 	"devDependencies": {
 		"prettier": "^2.8.4",
