--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@astrojs/tailwind": "^4.0.0",
 		"astro": "^3.1.2",
 		"astro-icon": "^0.8.1",
+		"sharp": "^0.32.6",
 		"tailwindcss": "^3.3.3"
 	},
 	"devDependencies": {
